--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,17 +14,19 @@ jobs:
 
     - name: Set up Python
       uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
+      # with:
+      #   python-version: '3.x'
 
     - name: Install requests
       run: pip install requests
 
-    - name: run bing
+    - name: run bingjson
       run: python ./python/bing_all_langs.py
 
     - name: Commit and Push
       run: |
+        git status
+        git diff
         git config --global user.name "${{ github.actor }}"
         git config --global user.email "${{ github.actor }}@users.noreply.github.com"
         git add .
