--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -24,13 +24,16 @@ jobs:
       run: python ./python/bing_all_langs_fullstartdate.py
 
     - name: Commit and Push
+      #git config --global user.name "${{ github.actor }}"
+      # git config --global user.email "${{ github.actor }}@users.noreply.github.com"
       run: |
         git status
         git diff
-        git config --global user.name "${{ github.actor }}"
-        git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git add .
-        git commit -m "Add downloaded image"
+        git commit -m "Add JSON at $(date +'%Y-%m-%d %H:%M:%S')"
         git push
+      
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
